vlib/v/parser/tests/inc_use_as_value.out
vlib/v/parser/tests/inc_use_as_value.vv:2:14: error: cannot use i++ as value
    1 | fn main() {
    2 |     for i := 0; i++; i < 100 {
      |                 ^
    3 |     }
    4 | }
