vlib/v/parser/tests/inc_use_as_value.vv
fn main() {
	for i := 0; i++; i < 100 {
	}
}
